# rust-downloader

./: .gitignore  Cargo.toml  README.md
src/: http.rs  lib.rs  main.rs  myftp.rs  parser.rs
src/bittorrent/: bittorent.rs  client.rs  handshake.rs  message.rs  mod.rs  parser.rs  peer.rs  piece.rs  torrent.rs  worker.rs
src/ftp/: mod.rs  myftp.rs  parser.rs
src/http/: http.rs  mod.rs  parser.rs  url.txt
