[package]
name = "rust-src"
version = "0.1.0"
edition = "2018"
authors = ["陈林峰"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest ={version =  "0.11.9",features = ["stream","blocking"]}
tokio = {version = "1.11.0",features = ["full"]}
futures-util = "0.3.17"
colorful = "0.2.1"
async_ftp = { version = "5.0.0", features = ["secure"] }
async-std = "1.10.0"


[profile.release]
debug = true

[dev-dependencies]
tokio-test = "0.4.2"
